fixed bug causing navbar content to hide on mobile

--- a/src/Grid/styles/modal.module.scss
+++ b/src/Grid/styles/modal.module.scss
@@ -27,7 +27,7 @@
 		position: absolute;
 		top: 15px;
 		right: 15px;
-		color: black;
+		color: white;
 		cursor: pointer;
 		z-index: 100;
 		@media (min-width: 465px) {
