--- a/src/Grid/styles/nav.module.scss
+++ b/src/Grid/styles/nav.module.scss
@@ -1,25 +1,17 @@
 @keyframes scrollDown {
 	from {
-		position: fixed;
-		top: -80px;
-		left: 0;
+		top: -55px;
 	}
 	to {
-		position: fixed;
 		top: 0;
-		left: 0;
 	}
 }
 @keyframes scrollUp {
 	from {
-		position: fixed;
 		top: 0;
-		left: 0;
 	}
 	to {
-		position: fixed;
-		top: -80;
-		left: 0;
+		top: -55px;
 	}
 }
 .navAppear {
@@ -34,6 +26,9 @@
 	z-index: 1;
 	min-width: 320px;
 	animation: scrollDown 0.2s linear;
+	-webkit-animation: scrollDown 0.2s linear;
+	-webkit-o-animation: scrollDown 0.2s linear;
+	-moz-animation: scrollDown 0.2s linear;
 	@media screen and (min-width: 525px) {
 		height: 80px;
 	}
@@ -69,7 +64,7 @@
 	width: 100%;
 	height: 55px;
 	position: fixed;
-	top: -80px;
+	top: -55px;
 	left: 0px;
 	background-color: white;
 	display: flex;
@@ -77,16 +72,24 @@
 	z-index: 1;
 	min-width: 320px;
 	animation: scrollUp 0.2s linear;
+	-webkit-animation: scrollUp 0.2s linear;
+	-webkit-o-animation: scrollUp 0.2s linear;
+	-moz-animation: scrollUp 0.2s linear;
 	@media screen and (min-width: 525px) {
 		height: 80px;
+		position: fixed;
+		top: -80px;
+		left: 0px;
 	}
 	.mobileView {
 		width: 100%;
 		height: 100%;
 		display: flex;
 		justify-content: space-between;
-		opacity: 0;
-		animation: fadeIn 2s linear;
+		position: relative;
+		@media screen and (min-width: 525px) {
+			display: none;
+		}
 		span {
 			height: 100%;
 			width: 60px;
@@ -94,9 +97,6 @@
 			display: flex;
 			justify-content: center;
 			align-items: center;
-		}
-		@media screen and (min-width: 525px) {
-			display: none;
 		}
 	}
 	.desktopView {
